v17.1/classes/GC.Spread.Pivot.PivotTableTheme.md
# Class: PivotTableTheme

[Spread](../modules/GC.Spread.md).[Pivot](../modules/GC.Spread.Pivot.md).PivotTableTheme

## Table of contents

### Constructors

- [constructor](GC.Spread.Pivot.PivotTableTheme.md#constructor)

### Methods

- [blankRowStyle](GC.Spread.Pivot.PivotTableTheme.md#blankrowstyle)
- [columnSubheading1Style](GC.Spread.Pivot.PivotTableTheme.md#columnsubheading1style)
- [columnSubheading2Style](GC.Spread.Pivot.PivotTableTheme.md#columnsubheading2style)
- [columnSubheading3Style](GC.Spread.Pivot.PivotTableTheme.md#columnsubheading3style)
- [firstColumnStripSize](GC.Spread.Pivot.PivotTableTheme.md#firstcolumnstripsize)
- [firstColumnStripeStyle](GC.Spread.Pivot.PivotTableTheme.md#firstcolumnstripestyle)
- [firstColumnStyle](GC.Spread.Pivot.PivotTableTheme.md#firstcolumnstyle)
- [firstHeaderCellStyle](GC.Spread.Pivot.PivotTableTheme.md#firstheadercellstyle)
- [firstRowStripSize](GC.Spread.Pivot.PivotTableTheme.md#firstrowstripsize)
- [firstRowStripeStyle](GC.Spread.Pivot.PivotTableTheme.md#firstrowstripestyle)
- [fromJSON](GC.Spread.Pivot.PivotTableTheme.md#fromjson)
- [grandTotalColumnStyle](GC.Spread.Pivot.PivotTableTheme.md#grandtotalcolumnstyle)
- [grandTotalRowStyle](GC.Spread.Pivot.PivotTableTheme.md#grandtotalrowstyle)
- [headerRowStyle](GC.Spread.Pivot.PivotTableTheme.md#headerrowstyle)
- [name](GC.Spread.Pivot.PivotTableTheme.md#name)
- [reportFilterLabelsStyle](GC.Spread.Pivot.PivotTableTheme.md#reportfilterlabelsstyle)
- [reportFilterValuesStyle](GC.Spread.Pivot.PivotTableTheme.md#reportfiltervaluesstyle)
- [rowSubheading1Style](GC.Spread.Pivot.PivotTableTheme.md#rowsubheading1style)
- [rowSubheading2Style](GC.Spread.Pivot.PivotTableTheme.md#rowsubheading2style)
- [rowSubheading3Style](GC.Spread.Pivot.PivotTableTheme.md#rowsubheading3style)
- [secondColumnStripSize](GC.Spread.Pivot.PivotTableTheme.md#secondcolumnstripsize)
- [secondColumnStripeStyle](GC.Spread.Pivot.PivotTableTheme.md#secondcolumnstripestyle)
- [secondRowStripSize](GC.Spread.Pivot.PivotTableTheme.md#secondrowstripsize)
- [secondRowStripeStyle](GC.Spread.Pivot.PivotTableTheme.md#secondrowstripestyle)
- [subtotalColumn1Style](GC.Spread.Pivot.PivotTableTheme.md#subtotalcolumn1style)
- [subtotalColumn2Style](GC.Spread.Pivot.PivotTableTheme.md#subtotalcolumn2style)
- [subtotalColumn3Style](GC.Spread.Pivot.PivotTableTheme.md#subtotalcolumn3style)
- [subtotalRow1Style](GC.Spread.Pivot.PivotTableTheme.md#subtotalrow1style)
- [subtotalRow2Style](GC.Spread.Pivot.PivotTableTheme.md#subtotalrow2style)
- [subtotalRow3Style](GC.Spread.Pivot.PivotTableTheme.md#subtotalrow3style)
- [toJSON](GC.Spread.Pivot.PivotTableTheme.md#tojson)
- [wholeTableStyle](GC.Spread.Pivot.PivotTableTheme.md#wholetablestyle)

## Constructors

### <a id="constructor" name="constructor"></a> constructor

• **new PivotTableTheme**()

PivotTableTheme类

## Methods

### <a id="blankrowstyle" name="blankrowstyle"></a> blankRowStyle

▸ **blankRowStyle**(`value?`): `any`

**`description`** 获取或设置透视表主题的blankRowStyle

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | [`PivotTableStyle`](GC.Spread.Pivot.PivotTableStyle.md) |

#### Returns

`any`

如果未设置值，则返回数据区的默认样式；否则，返回透视表主题

___

### <a id="columnsubheading1style" name="columnsubheading1style"></a> columnSubheading1Style

▸ **columnSubheading1Style**(`value?`): `any`

**`description`** 获取或设置数据透视表主题的 columnSubheading1Style

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | [`PivotTableStyle`](GC.Spread.Pivot.PivotTableStyle.md) |

#### Returns

`any`

如果未设置值，则返回数据区的默认样式；否则，返回透视表主题

___

### <a id="columnsubheading2style" name="columnsubheading2style"></a> columnSubheading2Style

▸ **columnSubheading2Style**(`value?`): `any`

**`description`** 获取或设置数据透视表主题的 columnSubheading2Style

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | [`PivotTableStyle`](GC.Spread.Pivot.PivotTableStyle.md) |

#### Returns

`any`

如果未设置值，则返回数据区的默认样式；否则，返回透视表主题

___

### <a id="columnsubheading3style" name="columnsubheading3style"></a> columnSubheading3Style

▸ **columnSubheading3Style**(`value?`): `any`

**`description`** 获取或设置数据透视表主题的 columnSubheading3Style

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | [`PivotTableStyle`](GC.Spread.Pivot.PivotTableStyle.md) |

#### Returns

`any`

如果未设置值，则返回数据区的默认样式；否则，返回透视表主题

___

### <a id="firstcolumnstripsize" name="firstcolumnstripsize"></a> firstColumnStripSize

▸ **firstColumnStripSize**(`value?`): `any`

**`description`** 获取或设置数据透视表主题的 firstColumnStripSize

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `number` |

#### Returns

`any`

如果未设置值，则返回第一个交替列的大小；否则，返回透视表主题

___

### <a id="firstcolumnstripestyle" name="firstcolumnstripestyle"></a> firstColumnStripeStyle

▸ **firstColumnStripeStyle**(`value?`): `any`

**`description`** 获取或设置数据透视表主题的 firstColumnStripeStyle

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | [`PivotTableStyle`](GC.Spread.Pivot.PivotTableStyle.md) |

#### Returns

`any`

如果未设置值，则返回数据区的默认样式；否则，返回透视表主题

___

### <a id="firstcolumnstyle" name="firstcolumnstyle"></a> firstColumnStyle

▸ **firstColumnStyle**(`value?`): `any`

**`description`** 获取或设置数据透视表主题的 firstColumnStyle

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | [`PivotTableStyle`](GC.Spread.Pivot.PivotTableStyle.md) |

#### Returns

`any`

如果未设置值，则返回数据区的默认样式；否则，返回透视表主题

___

### <a id="firstheadercellstyle" name="firstheadercellstyle"></a> firstHeaderCellStyle

▸ **firstHeaderCellStyle**(`value?`): `any`

**`description`** 获取或设置数据透视表主题的 firstHeaderCellStyle

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | [`PivotTableStyle`](GC.Spread.Pivot.PivotTableStyle.md) |

#### Returns

`any`

如果未设置值，则返回数据区的默认样式；否则，返回透视表主题

___

### <a id="firstrowstripsize" name="firstrowstripsize"></a> firstRowStripSize

▸ **firstRowStripSize**(`value?`): `any`

**`description`** 获取或设置数据透视表主题的 firstRowStripSize

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `number` |

#### Returns

`any`

如果未设置值，则返回第一个交替行的大小；否则，返回透视表主题

___

### <a id="firstrowstripestyle" name="firstrowstripestyle"></a> firstRowStripeStyle

▸ **firstRowStripeStyle**(`value?`): `any`

**`description`** 获取或设置数据透视表主题的 firstRowStripeStyle

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | [`PivotTableStyle`](GC.Spread.Pivot.PivotTableStyle.md) |

#### Returns

`any`

如果未设置值，则返回数据区的默认样式；否则，返回透视表主题

___

### <a id="fromjson" name="fromjson"></a> fromJSON

▸ **fromJSON**(`data`): `void`

从指定的 JSON 字符串加载对象状态。

**`example`**
```
//This example uses the fromJSON method.
const light1 = GC.Spread.Pivot.PivotTableThemes.light1;
//export
const jsonStr = JSON.stringify(light1.toJSON());
//import
const newTheme = new GC.Spread.Pivot.PivotTableTheme();
newTheme.fromJSON(JSON.parse(jsonStr));
newTheme.name('custom1');
alert(jsonStr);
```

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `data` | `Object` | 来自反序列化的数据透视表主题数据 |

#### Returns

`void`

___

### <a id="grandtotalcolumnstyle" name="grandtotalcolumnstyle"></a> grandTotalColumnStyle

▸ **grandTotalColumnStyle**(`value?`): `any`

**`description`** 获取或设置数据透视表主题的 grandTotalColumnStyle

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | [`PivotTableStyle`](GC.Spread.Pivot.PivotTableStyle.md) |

#### Returns

`any`

如果未设置值，则返回数据区的默认样式；否则，返回透视表主题

___

### <a id="grandtotalrowstyle" name="grandtotalrowstyle"></a> grandTotalRowStyle

▸ **grandTotalRowStyle**(`value?`): `any`

**`description`** 获取或设置数据透视表主题的 grandTotalRowStyle

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | [`PivotTableStyle`](GC.Spread.Pivot.PivotTableStyle.md) |

#### Returns

`any`

如果未设置值，则返回数据区的默认样式；否则，返回透视表主题

___

### <a id="headerrowstyle" name="headerrowstyle"></a> headerRowStyle

▸ **headerRowStyle**(`value?`): `any`

**`description`** 获取或设置数据透视表主题的 headerRowStyle

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | [`PivotTableStyle`](GC.Spread.Pivot.PivotTableStyle.md) |

#### Returns

`any`

如果未设置值，则返回数据区的默认样式；否则，返回透视表主题

___

### <a id="name" name="name"></a> name

▸ **name**(`value?`): `any`

**`description`** 获取或设置数据透视表主题的 name

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `string` |

#### Returns

`any`

如果未设置值，则返回样式的名称；否则，返回表主题

___

### <a id="reportfilterlabelsstyle" name="reportfilterlabelsstyle"></a> reportFilterLabelsStyle

▸ **reportFilterLabelsStyle**(`value?`): `any`

**`description`** 获取或设置数据透视表主题的 reportFilterLabelsStyle

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | [`PivotTableStyle`](GC.Spread.Pivot.PivotTableStyle.md) |

#### Returns

`any`

如果未设置值，则返回数据区的默认样式；否则，返回透视表主题

___

### <a id="reportfiltervaluesstyle" name="reportfiltervaluesstyle"></a> reportFilterValuesStyle

▸ **reportFilterValuesStyle**(`value?`): `any`

**`description`** 获取或设置数据透视表主题的 reportFilterValuesStyle

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | [`PivotTableStyle`](GC.Spread.Pivot.PivotTableStyle.md) |

#### Returns

`any`

如果未设置值，则返回数据区的默认样式；否则，返回透视表主题

___

### <a id="rowsubheading1style" name="rowsubheading1style"></a> rowSubheading1Style

▸ **rowSubheading1Style**(`value?`): `any`

**`description`** 获取或设置数据透视表主题的 rowSubheading1Style

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | [`PivotTableStyle`](GC.Spread.Pivot.PivotTableStyle.md) |

#### Returns

`any`

如果未设置值，则返回数据区的默认样式；否则，返回透视表主题

___

### <a id="rowsubheading2style" name="rowsubheading2style"></a> rowSubheading2Style

▸ **rowSubheading2Style**(`value?`): `any`

**`description`** 获取或设置数据透视表主题的 rowSubheading2Style

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | [`PivotTableStyle`](GC.Spread.Pivot.PivotTableStyle.md) |

#### Returns

`any`

如果未设置值，则返回数据区的默认样式；否则，返回透视表主题

___

### <a id="rowsubheading3style" name="rowsubheading3style"></a> rowSubheading3Style

▸ **rowSubheading3Style**(`value?`): `any`

**`description`** 获取或设置数据透视表主题的 rowSubheading3Style

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | [`PivotTableStyle`](GC.Spread.Pivot.PivotTableStyle.md) |

#### Returns

`any`

如果未设置值，则返回数据区的默认样式；否则，返回透视表主题

___

### <a id="secondcolumnstripsize" name="secondcolumnstripsize"></a> secondColumnStripSize

▸ **secondColumnStripSize**(`value?`): `any`

**`description`** 获取或设置数据透视表主题的 secondColumnStripSize

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `number` |

#### Returns

`any`

如果未设置值，则返回第二个交替列的大小；否则，返回透视表主题

___

### <a id="secondcolumnstripestyle" name="secondcolumnstripestyle"></a> secondColumnStripeStyle

▸ **secondColumnStripeStyle**(`value?`): `any`

**`description`** 获取或设置数据透视表主题的 secondColumnStripeStyle

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | [`PivotTableStyle`](GC.Spread.Pivot.PivotTableStyle.md) |

#### Returns

`any`

如果未设置值，则返回数据区的默认样式；否则，返回透视表主题

___

### <a id="secondrowstripsize" name="secondrowstripsize"></a> secondRowStripSize

▸ **secondRowStripSize**(`value?`): `any`

**`description`** 获取或设置数据透视表主题的 secondRowStripSize

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `number` |

#### Returns

`any`

如果未设置值，则返回第二个交替行的大小；否则，返回透视表主题

___

### <a id="secondrowstripestyle" name="secondrowstripestyle"></a> secondRowStripeStyle

▸ **secondRowStripeStyle**(`value?`): `any`

**`description`** 获取或设置数据透视表主题的 secondRowStripeStyle

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | [`PivotTableStyle`](GC.Spread.Pivot.PivotTableStyle.md) |

#### Returns

`any`

如果未设置值，则返回数据区的默认样式；否则，返回透视表主题

___

### <a id="subtotalcolumn1style" name="subtotalcolumn1style"></a> subtotalColumn1Style

▸ **subtotalColumn1Style**(`value?`): `any`

**`description`** 获取或设置数据透视表主题的 subtotalColumn1Style

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | [`PivotTableStyle`](GC.Spread.Pivot.PivotTableStyle.md) |

#### Returns

`any`

如果未设置值，则返回数据区的默认样式；否则，返回透视表主题

___

### <a id="subtotalcolumn2style" name="subtotalcolumn2style"></a> subtotalColumn2Style

▸ **subtotalColumn2Style**(`value?`): `any`

**`description`** 获取或设置数据透视表主题的 subtotalColumn2Style

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | [`PivotTableStyle`](GC.Spread.Pivot.PivotTableStyle.md) |

#### Returns

`any`

如果未设置值，则返回数据区的默认样式；否则，返回透视表主题

___

### <a id="subtotalcolumn3style" name="subtotalcolumn3style"></a> subtotalColumn3Style

▸ **subtotalColumn3Style**(`value?`): `any`

**`description`** 获取或设置数据透视表主题的 subtotalColumn3Style

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | [`PivotTableStyle`](GC.Spread.Pivot.PivotTableStyle.md) |

#### Returns

`any`

如果未设置值，则返回数据区的默认样式；否则，返回透视表主题

___

### <a id="subtotalrow1style" name="subtotalrow1style"></a> subtotalRow1Style

▸ **subtotalRow1Style**(`value?`): `any`

**`description`** 获取或设置数据透视表主题的 subtotalRow1Style

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | [`PivotTableStyle`](GC.Spread.Pivot.PivotTableStyle.md) |

#### Returns

`any`

如果未设置值，则返回数据区的默认样式；否则，返回透视表主题

___

### <a id="subtotalrow2style" name="subtotalrow2style"></a> subtotalRow2Style

▸ **subtotalRow2Style**(`value?`): `any`

**`description`** 获取或设置数据透视表主题的 subtotalRow2Style

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | [`PivotTableStyle`](GC.Spread.Pivot.PivotTableStyle.md) |

#### Returns

`any`

如果未设置值，则返回数据区的默认样式；否则，返回透视表主题

___

### <a id="subtotalrow3style" name="subtotalrow3style"></a> subtotalRow3Style

▸ **subtotalRow3Style**(`value?`): `any`

**`description`** 获取或设置数据透视表主题的 subtotalRow3Style

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | [`PivotTableStyle`](GC.Spread.Pivot.PivotTableStyle.md) |

#### Returns

`any`

如果未设置值，则返回数据区的默认样式；否则，返回透视表主题

___

### <a id="tojson" name="tojson"></a> toJSON

▸ **toJSON**(): `Object`

将对象状态保存到 JSON 字符串

**`example`**
```
//This example uses the toJSON method.
const light1 = GC.Spread.Pivot.PivotTableThemes.light1;
//export
const jsonStr = JSON.stringify(light1.toJSON());
//import
const newTheme = new GC.Spread.Pivot.PivotTableTheme();
newTheme.fromJSON(JSON.parse(jsonStr));
newTheme.name('custom1');
alert(jsonStr);
```

#### Returns

`Object`

数据透视表主题数据。

___

### <a id="wholetablestyle" name="wholetablestyle"></a> wholeTableStyle

▸ **wholeTableStyle**(`value?`): `any`

**`description`** 获取或设置数据透视表主题的 wholeTableStyle

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | [`PivotTableStyle`](GC.Spread.Pivot.PivotTableStyle.md) |

#### Returns

`any`

如果未设置值，则返回数据区的默认样式；否则，返回透视表主题
